--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,11 @@
 name: graph_calculator
-description: A new Flutter package project.
-version: 0.0.1
-homepage:
+description: A Flutter package for graphing mathematical functions in your app, enabling interactive plotting and visualization.
+version: 0.0.2
+homepage: https://github.com/Muslims-code/graph_calculator
+repository: https://github.com/Muslims-code/graph_calculator
 
 environment:
-  sdk: '>=3.1.3 <4.0.0'
+  sdk: '>=2.12.0 <4.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
